--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.1.8",
     "node-sass": "^4.13.1",
     "postcss-loader": "^3.0.0",
     "react": "^16.4.1",
