--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
     "react-bootstrap": "^1.0.0-beta.17",
-    "react-icons": "^3.9.0"
+    "react-icons": "^3.9.0",
+    "react-number-format": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.23",
